--- a/assets/css/home-style.css
+++ b/assets/css/home-style.css
@@ -1,6 +1,20 @@
 * {
   font-family: Poppins;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: gray;
+  border-radius: 5px;
+}
+
+[data-bs-theme="dark"] ::-webkit-scrollbar-thumb {
+  background-color: white;
+}
+
 .main {
   height: auto;
 }
